--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ links:
     url:          /http://muan.co
     external:     true
   - name:         Email
-    url:          /mailto:hello@muan.co
+    url:          mailto:beautifularea@163.com
     external:     true
   - name:         GitHub
     url:          http://github.com/beautifularea
