修复签名等

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:            Title
+title:            beautifularea's blog:
 description:      美丽的流域
 url:              http://beautifularea.github.io
-signoff:          sign
+signoff:          beautifularea
 disqus_shortname: # disqus comment thread for post header options. ( leave blank if unwanted. )
 facebook_appid:   # appid for like button, remove from /_includes/share.html if unwanted.
 google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
