--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            beautifularea's blog:
+title:            美丽的流域 blog:
 description:      美丽的流域
 url:              http://beautifularea.github.io
 signoff:          beautifularea
